--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,7 @@ APP_DESC="nest js starter with postgress and prisma"
 APP_VERSION="1.0"
 
 # database
-DATABASE_URL="postgresql://<dbuser>:<dbpassword>@localhost:5432/<dbname>?schema=public"
-
+POSTGRES_USER=db_user
+POSTGRES_PASSWORD=db_password
+POSTGRES_DB_NAME='nestjs_app'
+DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/${POSTGRES_DB_NAME}?schema=public"
