add Auth 0 strategy and refine migration

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,7 @@ POSTGRES_USER=db_user
 POSTGRES_PASSWORD=db_password
 POSTGRES_DB_NAME='nestjs_app'
 DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/${POSTGRES_DB_NAME}?schema=public"
+
+# AUTH
+AUTH0_ISSUER_URL=https://dev-rmsk6vbx08z8v4hj.us.auth0.com/
+AUTH0_AUDIENCE=nestjsstarter.api.demo.com
