--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,19 @@
 version: '3.8'
 services:
 
+  nestjs-starter:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    restart: always
+    ports:
+      - '8080:8080'
+    volumes:
+      - .:/app
+    depends_on:
+      - postgres 
+
+
   postgres:
     image: postgres:16.2
     restart: always
