add signoz for APM

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,7 @@ DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/
 # AUTH
 AUTH0_ISSUER_URL=https://dev-rmsk6vbx08z8v4hj.us.auth0.com/
 AUTH0_AUDIENCE=nestjsstarter.api.demo.com
+
+#SigNoz
+OTEL_EXPORTER_OTLP_HEADERS="signoz-access-token=9a6484ac-9bb4-4b1f-b218-4f3e913e44c2"
+SIGNOZ_CLOUD_URL='https://kseo-gqlg.in.signoz.cloud/services?relativeTime=30m'
