--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,7 @@ AUTH0_AUDIENCE=nestjsstarter.api.demo.com
 #SigNoz
 OTEL_EXPORTER_OTLP_HEADERS="signoz-access-token=9a6484ac-9bb4-4b1f-b218-4f3e913e44c2"
 SIGNOZ_CLOUD_URL='https://kseo-gqlg.in.signoz.cloud/services?relativeTime=30m'
+
+#logs
+LOG_LEVEL='debug'
+LOG_DIR='logs'
