--- a/package.json
+++ b/package.json
@@ -37,8 +37,11 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "jwks-rsa": "^3.1.0",
+    "nestjs-pino": "^4.0.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "pino-http": "^9.0.0",
+    "pino-pretty": "^11.0.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.0"
