--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nestjs-starter-kit",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Kishor Giri",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -62,6 +62,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
+    "jest-mock-extended": "^3.0.5",
     "prettier": "^3.0.0",
     "prisma": "^5.11.0",
     "source-map-support": "^0.5.21",
@@ -71,23 +72,6 @@
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
   },
   "prisma": {
     "seed": "ts-node prisma/seeds/seed.ts"
